@@ -3,4 +3,5 @@ Funcionario:
     Limited the iteration loop in the contem method to the length of the array;
     Just made a research and found helpful info about exception handling,
 which includes names of exceptions and that some sources use "e" as an alias for the variable;
-    IndexOutOfBounds treated in posicaoOcupada().
+    IndexOutOfBounds treated in posicaoOcupada();
+    remove() needs several tests and fixes;
